2019-02-16  Sam Varshavchik  <mrsam@courier-mta.com>

	* dirlisting/filedirlist_manager_impl.C: Bug fix.

	* includes/x/w/main_windowobj.H: Redefine the parameters passed to
	standard dialogs' "Ok" and "Cancel" callbacks. Other dialog API
	tweaks and cleanups.

0.18

2019-02-11  Sam Varshavchik  <mrsam@courier-mta.com>

	* Implement static tooltips.

2019-02-10  Sam Varshavchik  <mrsam@courier-mta.com>

	* includes/x/w/input_field: add select_all() to the input field filter
	callbacks.

	* gridlayoutmanager_impl.C: Fix replace_cell() bug.

0.17

2019-01-29  Sam Varshavchik  <mrsam@courier-mta.com>

	* Input field on_filter() API.

	* color_picker/color_picker.C: Fix bug in resetting the current
	color shown if the popup is closed, in some circumstances.

2019-01-26  Sam Varshavchik  <mrsam@courier-mta.com>

	* richtext/richtext.C (richtextObj::redraw_whatsneeded): Fix
	multi-line input field display bug.

0.16

2019-01-20  Sam Varshavchik  <mrsam@courier-mta.com>

	* Reimplemented and simplified API for creating Copy/Cut/Paste
	menu items.

2019-01-19  Sam Varshavchik  <mrsam@courier-mta.com>

	* Default context popup menu in input fields, with Copy/Cut/Paste
	menu options.

2019-01-15  Sam Varshavchik  <mrsam@courier-mta.com>

	* includes/x/w/impl/focus/focusable_element.H (process_button_event):
	Right mouse button click moves keyboard focus just like the left
	mouse button click.

0.15

2019-01-06  Sam Varshavchik  <mrsam@courier-mta.com>

	* Clean up the internal code that created scrollable peepholes
	(used by input fields, combo-boxes, the item layout manager, and
	the pane layout manager).

	Add a public API for the underlying peephole layout manager.

2018-12-27  Sam Varshavchik  <mrsam@courier-mta.com>

	* ""_theme_font literals may now include font modifiers like
	""_font. Implement + and += operator overloads on x::w::font
	that modify an existing font.

0.14
	* Added search callback to the input field.

0.13
