@@ -1,5 +1,9 @@
 2019-02-16  Sam Varshavchik  <mrsam@courier-mta.com>
 
+	* file_dialog/file_dialog_impl.C: Add a right context popup menu
+	in the file dialog (both the directory and the file section), that
+	implement basic file operations.
+
 	* dirlisting/filedirlist_manager_impl.C: Bug fix.
 
 	* includes/x/w/main_windowobj.H: Redefine the parameters passed to
